crates/keron-lang/tests/corpus/errors/parse/single_line_string_raw_newline.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: single-line string literal cannot contain a raw newline
  --> 1:11
  |
1 | val bad = "hello
  |           ^
